# dialer

./: .dockerignore  .gitignore  .justfile  Cargo.toml  Dockerfile  Dockerfile.ubuntu  README.md  bacon.toml  checks-dist.toml  checks.toml
examples/: ping-google.rs  simple-ping.rs
html/: htmx.html  index.html
migrations/: V001__init.sql
scripts/: dev.sh  loop.sh  rollup.sh
src/: api.rs  app.rs  check.rs  checker.rs  config.rs  db.rs  lib.rs  main.rs  web.rs
templates/: askama.html  index.html  old-index.html
