[package]
name = "dialer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
axum = "0.7.7"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = "0.6.3"
dns-lookup = "2.0.4"
eyre = "0.6.12"
futures = "0.3.30"
humantime-serde = "1.1.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
refinery = { version = "0.8.14", features = ["rusqlite"] }
reqwest = "0.12.7"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
surge-ping = "0.8.1"
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-ping = "0.3.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
