[package]
name = "dialer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
askama = "0.12.1"
async-trait = "0.1.82"
axum = "0.7.7"
axum-macros = "0.4.2"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
dns-lookup = "2.0.4"
futures = "0.3.30"
humantime-serde = "1.1.1"
once_cell = "1.19.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
refinery = { version = "0.8.14", features = ["rusqlite"] }
reqwest = "0.12.7"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
strum = "0.26.3"
strum_macros = "0.26.4"
surge-ping = "0.8.1"
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-ping = "0.3.0"
tokio-stream = "0.1.16"
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "compression-gzip"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
